# code_wizard

./: README.md  consts.py  pyproject.toml  requirements.txt  vercel.json
code_wizard/: core.py  docs_to_embeddings.ipynb  docs_to_embeddings.py  main.py  streamlit.py  temp.ipynb
code_wizard/routers/: code_wizard_endpoint.py
code_wizard/routers/utils/: type_classes.py
